--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		<div class="section" title="Deadeye Mod">
 			<a href="https://github.com/Namefix/DeadeyeMod"> <img class="simg" src="src/deadeyemod.png" width="200" height="200" title="Deadeye Mod"></a>
 		</div>
+		<div class="section" title="Zapinators">
+			<a href="https://github.com/Namefix/Zapinators"> <img class="simg" src="src/zapinators.png" width="200" height="200" title="Zapinators"></a>
+		</div>
 		<div class="section" title="WordStory">
 			<a href="https://discord.com/application-directory/755436721080107130"> <img class="simg" src="src/wordstory.png" width="200" height="200" title="WordStory"> </a>
 		</div>
@@ -35,9 +38,10 @@
 		</div>
 		
 		<br><br>
-		<i class="fa-brands fa-discord icon discord" title="Namefix"></i>
+		<i id="discord" class="fa-brands fa-discord icon discord" title="Namefix"></i>
 		<a href="https://github.com/Namefix" title="GitHub"><i class="fa-brands fa-github icon"></i></a>
 
 	</center>
+	<div class="bg-background"></div>
 </body>
 </html>
