Made socials smaller and fixed project click issue

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <span class="project-desc">A Discord bot that lets you write stories with your friends in turn.</span>
                         <div class="project-properties">
                             <div class="project-property-entry color-javascript">JavaScript</div>
-                            <a href="https://discord.js.org" target="_blank" rel="noopener noreferrer"><div class="project-property-entry color-discordjs">Discord.js</div></a>
+                            <div class="project-property-entry color-discordjs">Discord.js</div>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                         <span class="project-desc">A multiplayer web Minecraft clone that was made in 3 days.</span>
                         <div class="project-properties">
                             <div class="project-property-entry color-javascript">JavaScript</div>
-                            <a href="https://socket.io" target="_blank" rel="noopener noreferrer"><div class="project-property-entry color-socketio">Socket.IO</div></a>
+                            <div class="project-property-entry color-socketio">Socket.IO</div>
                         </div>
                     </div>
                 </div>
