Small adjustments and fixes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="center-box">
         <div class="profile-box">
-            <img class="logo" src="./img/logo.png">
+            <img title="a bad choice..." class="logo" src="./img/logo.png">
             <span class="logo-text">Namefix</span>
             <div class="logo-desc-container">
                 <span class="logo-desc">I fix names</span>
