Layout changes on profile box

--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
     <div class="center-box">
         <div class="profile-box">
             <img title="a bad choice..." class="logo" src="./img/logo.png">
-            <span class="logo-text">Namefix</span>
-            <div class="logo-desc-container">
-                <span class="logo-desc">I fix names</span>
-                <span class="logo-desc">I don't fix names</span>
+            <div class="profile-box-texts">
+                <span class="logo-text">Namefix</span>
+                <div class="socials-box">
+                    <a href="https://youtube.com/@namefix" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-youtube link-icon"></i></a>
+                    <a href="https://discordapp.com/users/366333938953617408" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord link-icon"></i></a>
+                    <a href="https://github.com/Namefix" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github link-icon"></i></a>
+                    <a href="https://steamcommunity.com/id/thenamefix" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-steam link-icon"></i></a>
+                    <a href="https://reddit.com/u/Namefix" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-reddit link-icon"></i></a>
+                </div>
             </div>
-            <div class="socials-box">
-                <a href="https://youtube.com/@namefix" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-youtube link-icon"></i></a>
-                <a href="https://discordapp.com/users/366333938953617408" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord link-icon"></i></a>
-                <a href="https://github.com/Namefix" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github link-icon"></i></a>
-                <a href="https://steamcommunity.com/id/thenamefix" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-steam link-icon"></i></a>
-                <a href="https://reddit.com/u/Namefix" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-reddit link-icon"></i></a>
-            </div>
-            <span class="title-projects">- projects -</span>
         </div>
+        <div class="logo-desc-container">
+            <span class="logo-desc">I fix names</span>
+            <span class="logo-desc">I don't fix names</span>
+        </div>
+        <span class="title-projects">- projects -</span>
         <div class="projects-box">
             <a href="https://www.curseforge.com/minecraft/mc-mods/zapinators" class="project-link" target="_blank" rel="noopener noreferrer">
                 <div class="project-entry">
